--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -1,6 +1,6 @@
 .loader-page {
   z-index: 25000;
-  color: #ffffff;
+  color: #0c0c0c;
   margin: 100px 0px 100px;
   height: 100%;
   font-size: 18px;
@@ -16,12 +16,12 @@
 .loader-page::before {
   content: '';
   position: absolute;
-  border: 4px solid rgb(50, 150, 176);
+  border: 6px solid #ffd52b;
   width: 120px;
   height: 120px;
   border-radius: 50%;
   box-sizing: border-box;
-  border-left: 2px solid rgba(50, 150, 176, 0);
+  border-left: 2px solid rgba(149, 176, 50, 0);
   border-top: 2px solid rgba(50, 150, 176, 0);
   animation: rotarload 1s linear infinite;
   transform: rotate(0deg);
@@ -39,7 +39,7 @@
 .loader-page::after {
   content: '';
   position: absolute;
-  border: 4px solid rgba(50, 150, 176, 0.5);
+  border: 6px solid #ffd52b;
   width: 120px;
   height: 120px;
   border-radius: 50%;
