--- a/src/styles/Custom.css
+++ b/src/styles/Custom.css
@@ -3,7 +3,7 @@
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 }
-.p-dialog-footer{
+.p-dialog-footer {
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 }
@@ -27,7 +27,10 @@
 	padding-top: 0px !important;
 	padding-bottom: 0px !important;
 }
-.p-dropdown{
-	background-color: #efefef!important;
+.p-dropdown {
+	background-color: #efefef !important;
+}
+.css-10ddb90-MuiButtonBase-root-MuiIconButton-root {
+	color: green !important;
 }
 
