--- a/src/styles/Custom.css
+++ b/src/styles/Custom.css
@@ -60,3 +60,9 @@
 .custom-accordion .accordion-button::after{
 	margin: 0px;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
