--- a/src/styles/Custom.css
+++ b/src/styles/Custom.css
@@ -48,12 +48,16 @@
 	padding: 1px;
 	border-radius: 5px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 .custom-accordion .accordion-button:hover {
 	background-color: #ffe57c !important;
 }
 .custom-accordion .accordion-button:focus {
+	background-color: #ffd52b !important;
+}
+.accordion-button:not(.collapsed) {
+	color: black !important;
 	background-color: #ffd52b !important;
 }
 .custom-accordion .accordion-button::after {
@@ -66,6 +70,12 @@
 .modal-body {
 	background-color: #cccccc;
 	border-radius: 0px 0px 10px 10px;
+}
+.p-menu.p-menu-overlay {
+	border-radius: 10px;
+}
+.p-menuitem-content .p-menuitem-link:hover {
+	background-color: #ffd52b;
 }
 
 input[type='number']::-webkit-inner-spin-button,
